--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -200,6 +200,8 @@
         .container {
             
             .contact-me {
+                padding: 1rem;
+
                 .section-title {
                     font-size: 1.5rem;
                 }
@@ -217,6 +219,14 @@
                     }
                     .social {
                         justify-content: space-between;
+                    }
+                }
+                .contact-form {
+                    width: 100%;
+                    margin: 0 auto;
+
+                    .spam-filter {
+                        max-width: 50%;
                     }
                 }
             }
